Czekanie-nie działa

--- a/nowa lekcja/static/index.html
+++ b/nowa lekcja/static/index.html
@@ -27,10 +27,7 @@
     <div id="root"></div>
 
     
-    <!-- <input type="number" id="txt1">
-    <button id="bt1">ustaw zmienną</button>
-    <button id="bt2">pobierz wartość zmiennej</button>
-    <button id="bt3">wyślij dane na serwer</button> -->
+<div id="curtain"></div>
 
 
 
